# SPACEc

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  20230411_Pipeline.py  20230424_Pipeline.py  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  Functions_overview.docx  LICENSE.txt  README.md  README.rst  TODO.md  environment.yml  install_spacec.sh  requirements-deepcell-mac-arm64_tf210.txt  requirements-deepcell-mac-arm64_tf213.txt  requirements-deepcell-mac-arm64_tf28.txt  requirements.txt  setup.cfg  setup.py  spacec_from_his.yml  spacec_no_built.yml  step1_conda  step1_pip  step2_conda  step2_pip  test4_step1_conda  test4_step1_pip  tox.ini
.github/workflows/: ci.yml
Clean_functions/: All_functions.ipynb  All_functions.py  AnnData.py  Example_pipeline.py  Pretty_Pipeline.py
Clean_functions/CellAtlas_neighborhood_analysis_110221_YT/: Cell_atlas_neighborhood_analysis_functions.py
Clean_functions/CellAtlas_percent/: CellAtlas_cell_type_composition.py  Shannon_diversity_function.py
Clean_functions/R_Triangulation/: triangulation_distances.R
Clean_notebooks/CellAtlas_percent/: CellAtlas_percent_clean.ipynb  Correlation_analysis_UNFINISHED.ipynb  Shannon_diversity_function_clean.ipynb
Clean_notebooks/R_Triangulation/: R_triangulation_in_python.ipynb
Docker/: Dockerfile  SPACEc_cpu  SPACEc_gpu  spacec_cpu_build.dockerfile  spacec_gpu_build.dockerfile  tutorial.Dockerfile  tutorial_init.sh
Docker/old/: Dockerfile  tutorial.Dockerfile
Functions_grouped/: All_functions.py  All_functions_improved.py  Analysis_dependent_on_CNs.py  Baseline_visualization.py  Helper_functions.py  Neighborhood_Community_analysis.py  SAP_helperfunctions_hf 2.py  SAP_helperfunctions_hf.py  SAP_plot_pl.py  SAP_preprocessing_pp.py  SAP_tools_tl.py
Issues /.ipynb_checkpoints/: Issue_report_CCA (solved)-checkpoint.ipynb
Original_notebooks/: .CellAtlas_Community.ipynb.icloud  .HigherOrder_John_thres10.ipynb.icloud  .HuBMAP_all_spatial_contexts_communities.ipynb.icloud  B004_12_network_structure.ipynb  Cell Type Differential Enrichment.ipynb  Cell_distance.ipynb  Distance_CRUK_Yuqi_MvT.ipynb  Distance_CRUK_Yury.ipynb  HigherOrder_John_thres10.ipynb  HuBMAP_all_spatial_contexts_communities.ipynb  cca_cleaned_up.ipynb  tensor_decomposition_cleaned_up.ipynb
Original_notebooks/Distance_permutation_R/: Tcell_John.Rmd  triangulation_distances.R
Original_notebooks/cellhier/: general.py  knn_graph_neighborhood.py
R/: .Rhistory
docs/: conf.py  index.md  index.rst  requirements.txt  tutorials.md
example_data/: channelnames.txt
notebook/: 0.qptiff_converter.ipynb  1.Cell_segmentation.ipynb  2.Preprocessing.ipynb  3.Cell_annotation_ml.ipynb  4.CN_analysis.ipynb  6.Patch_proximity_analysi.ipynb
notebook/Manuscript_notebooks/: CellPose_Segmentation_whole_dataset.ipynb  Compatibility_with_other_tools.ipynb  Distance_permutation_analysis_demo.ipynb  Patch_proximity_analysis.ipynb  Preview_CN_analysis.ipynb  Preview_Clustering.ipynb  Preview_Preprocessing.ipynb  Triangulation_translation.ipynb  Triangulation_translation_clean.ipynb  distance_permutation_analysis.ipynb  prepare_df.ipynb
notebook/Manuscript_notebooks/.ipynb_checkpoints/: Preview_Clustering-checkpoint.ipynb
notebook/models/Mesmer_model/MultiplexSegmentation/: keras_metadata.pb  saved_model.pb
notebooks/: 0_qptiff_converter.ipynb  0_tissue_extractor.ipynb  2.Preprocessing.ipynb  2_preprocessing.ipynb  3_cell_annotation_STELLAR.ipynb  3_cell_annotation_ml.ipynb  4.CN_analysis.ipynb  4_cell_neighborhood_analysis.ipynb  5.Distance_permutation_analysis.ipynb  5_distance_permutation_analysis.ipynb  6_patch_proximity_analysis.ipynb  7_TissUUmaps.ipynb  CellSeg_compensation.ipynb  Interactive_clustering_demo.ipynb  tissue_maps.py
requirements/: README.md  requirements-deepcell-mac-arm64_tf210-metal.txt  requirements-deepcell-mac-arm64_tf210.txt  requirements-deepcell-mac-arm64_tf28-metal.txt
src/: SAP_plot_pl.py  SAP_preprocessing_pp.py  SAP_tools_tl.py  Setup.py  cell_pose_segmentation.py  helperfunctions_hf.py  plot_pl.py  preprocessing_pp.py  python_R_wrapper.py  qptiff_converter.py  segmentation.py  tools_tl.py
src/spacec/: __init__.py  helperfunctions_hf.py  plot_pl.py  segmentation.py  tools_tl.py
src/spacec/_shared/: segmentation.py  segmentation_unused.py
src/spacec/archive/: tools_archive.py
src/spacec/helperfunctions/: __init__.py  _general.py  _qptiff_converter.py
src/spacec/plotting/: __init__.py  _general.py  _qptiff_converter.py  _segmentation.py  plot_pl.py
src/spacec/preprocessing/: __init__.py  _general.py
src/spacec/tools/: _RAPIDS_clustering.py  __init__.py  _general.py  _qptiff_converter.py  _segmentation.py  tools_tl.py
src/spacodex/: __init__.py  helperfunctions_hf.py  plot_pl.py  preprocessing_pp.py  segmentation.py  tools_tl.py
tests/: cell_segmentation.py  conftest.py  test_0_qptiff_converter.py  test_1_cell_segmentation.py  test_2_preprocessing.py  test_2_preprocessing_compensation.py  test_3_cell_annotation_STELLAR.py  test_3_cell_annotation_ml.py  test_3_clustering.py  test_3_clustering_gpu.py  test_4_cellular_neighborhood_analysis.py  test_4_cellular_neighborhoud_analysis.py  test_5_distance_permutation_analysis.py  test_6_patch_proximity_analysis.py  test_7_TissUUmaps.py
tests/data/processed/cellseg/: reg001_X01_Y01_Z01_compensated.csv  reg010_X01_Y01_Z01_compensated.csv
tests/data/raw/: S1121_Scan1_small.qptiff
uptodate_work/Docker/: Dockerfile
uptodate_work/Functions/: SAP_helperfunctions_hf.py  SAP_plot_pl.py  SAP_tools_tl.py
uptodate_work/Functions/Python/: SAP_helperfunctions_hf.py  SAP_plot_pl.py  SAP_preprocessing_pp.py  SAP_tools_tl.py
uptodate_work/Functions/R/: run_triangulation_distances.R  triangulation_distances.R
uptodate_work/Pipeline/: Pipeline_steps_manuscript.py  SAP_manuscript_pipeline.ipynb  SpatialAnalysis_tissue_extraction_segmentation_preprocessing.ipynb  Triangulation.Rmd  Triangulation.ipynb
uptodate_work/Script_by_figure/Fig5_Distance_permutation_analysis/: Fig5.ipynb
(+10 files in other folders)
